# rules_mypy

./: .gitattributes  .gitignore  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: ci.yaml  release.yml  release_prep.sh
docs/: BUILD.bazel  rules.md
examples/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  mypy.bzl  pyproject.toml  requirements.txt  toplevel.py
examples/smoke/basic/: BUILD.bazel  example.py
examples/smoke/has_dependencies/: BUILD.bazel  example.py
examples/smoke/many_third_party_deps/: BUILD.bazel  example.py
examples/smoke/strict/: BUILD.bazel  example.py
examples/smoke/third_party_types_package/: BUILD.bazel  example.py
examples/smoke/type_error/: BUILD.bazel  example.py
examples/smoke/uses_plugins/: BUILD.bazel  example.py
mypy/: BUILD.bazel  defs.bzl
mypy/private/: BUILD.bazel  mypy.bzl
