load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_mypy//mypy:defs.bzl", "mypy_stdlib_cache")
load("@pypi//:requirements.bzl", "requirement")

exports_files(["pyproject.toml"])

mypy_stdlib_cache(
    name = "stdlib_cache",
    config = "//:pyproject.toml",
    mypy = requirement("mypy"),
    plugins = [
        requirement("pydantic"),
    ],
    visibility = ["//visibility:public"],
)

py_library(
    name = "toplevel",
    srcs = ["toplevel.py"],
    tags = ["mypy"],
)

build_test(
    name = "smoke_test",
    targets = [
        # keep sorted
        "//:toplevel",
        "//has_dependencies",
        "//many_third_party_deps",
        "//strict",
        "//third_party_types_package",
        "//type_error",
        "//uses_plugins",
    ],
)
