# Poetry is only used to generate a locked requirements.txt
[tool.poetry]
name = "smoke"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.8.0"
pydantic = "^2.5.3"
boto3 = "^1.34.14"
django = "^5.0.1"
fastapi = "^0.108.0"
pandas = "^2.1.4"
pytest = "^7.4.4"
requests = "^2.31.0"
types-requests = "^2.31.0.20240106"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Mypy configuration
[tool.mypy]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_return_any = true
exclude = [
    "bazel-*"
]

# Ignore modules without type info
[[tool.mypy.overrides]]
module = [
    "tzdata.*",
    # In mypy typeshed but not in python 3.11
    "_bootlocale",
    "_dummy_thread",
    "_dummy_threading",
    "binhex",
    "distutils.command.bdist_msi",
    "distutils.command.bdist_wininst",
    "dummy_threading",
    "formatter",
    "macpath",
    "parser",
    "symbol",
    "sys._monitoring",
]
ignore_missing_imports = true
