load("@rules_python//python:defs.bzl", "py_library")
load("@pypi//:requirements.bzl", "requirement")

py_library(
    name = "third_party_types_package",
    srcs = glob(["*.py"]),
    tags = ["mypy"],
    visibility = ["//:__subpackages__"],
    deps = [
        # keep sorted
        requirement("requests"),
        requirement("types-requests"),
    ],
)
